<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="title_font_color">@android:color/black</string>
    <string name="action_settings">Settings</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build_it">Build it Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="background_color">#ffcefcff</string>
    <string name="main_btn_color">@android:color/holo_orange_light</string>
    <string name="main_btn_font_color">@android:color/black</string>
    <string name="capstone_btn_color">@android:color/holo_red_dark</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="capstone_font_color">@android:color/white</string>
</resources>
