<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffcefcff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@string/title_font_color"
            android:textSize="24sp" />

        <Button
            android:id="@+id/spotify_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@string/main_btn_color"
            android:onClick="launchSpotify"
            android:text="@string/spotify"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/scores_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spotify_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@string/main_btn_color"
            android:onClick="launchScores"
            android:text="@string/scores"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/library_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scores_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@string/main_btn_color"
            android:onClick="launchLibrary"
            android:text="@string/library"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/build_it_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/library_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@string/main_btn_color"
            android:onClick="launchBuildIt"
            android:text="@string/build_it"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/xyz_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/build_it_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@string/main_btn_color"
            android:onClick="launchXYZ"
            android:text="@string/xyz_reader"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/capstone_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/xyz_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@string/capstone_btn_color"
            android:onClick="launchCapstone"
            android:text="@string/capstone"
            android:textAllCaps="true"
            android:textColor="@string/capstone_font_color"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>
